--- a/misc-testing-scripting/templates/index.html
+++ b/misc-testing-scripting/templates/index.html
@@ -17,7 +17,8 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-    <div id="board" style="width: 50%"></div>
+    <div id="board" style="width: 25%"></div>
+    <button id="changepos" onclick="changePos()">Change board position</button>
 </body>
 
 <script>
@@ -26,10 +27,14 @@
         synth.triggerAttackRelease("C4", "16n"); //playes synth tone C4 for duration of 16th note (8n = 8th note, 2n = half note, so on)
     }
 
+    function changePos() {
+        board.move('e2-e4')
+    }
+
     var config = {
         draggable: true,
         dropOffBoard: 'snapback',
-        onDragMove: test,
+        onChange: test,
         position: 'start',
         pieceTheme: 'static/img/chesspieces/wikipedia/{piece}.png'
     }
