--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
 		<div class="col-md-7">
             <form action="">
                 <input type="text" placeholder="Your chess.com username">
+                Month: <input type="number" min= "1" max="12" placeholder="1">
                 <input type="submit" value="Get Games">
             </form>
 			<div id="board" style="width: 70%; height: 70%"></div>
