--- a/templates/index.html
+++ b/templates/index.html
@@ -101,17 +101,20 @@
     //     setTimeout(function(){ alert("Hello"); }, 3000);
     // }
 
-    
-    function changePos() {
+    function sleep(ms) {
+        return new Promise(resolve => setTimeout(resolve, ms));
+    }
+
+    async function changePos() {
         board.move('e2-e4')
-        //for(var i=0;i<moves.length;i++){
+        for(var i=0;i<moves.length;i++){
             //setTimeout(() => ( ,2000);
-            setInterval(function sleep(){ for(var i=0;i<moves.length;i++){  board.move(moves[i])}  }, 3000);
+            //setInterval(function sleep(){ for(var i=0;i<moves.length;i++){  board.move(moves[i])}  }, 3000);
 
-       
-            //board.move(moves[i])
+            await sleep(2000);
+            board.move(moves[i])
 
-        //}
+        }
     }
     
 
