--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,8 @@
 		<div class="col-md-7">
             <form action="">
                 <input id="username" type="text" placeholder="Your chess.com username">
-                Month: <input id="month" type="number" min= "1" max="12" placeholder="1">
+                Month: <input id="month" type="number" min="1" max="12" placeholder="1">
+                Year: <input id="year" type="number" min="2016" max="2021" placeholder="2021">
                 <input type="button" value="Get Games" onclick="api_call()">
             </form>
 			<div id="board" style="width: 70%; height: 70%"></div>
@@ -84,8 +85,8 @@
 	</div>
 </div>
 <script>
-    function load_data(username, month) {
-        fetch('http://localhost:5000/api/chess/' + username + '/2021/' + month)
+    function load_data(username, month, year) {
+        fetch('http://localhost:5000/api/chess/' + username + '/' + year + '/' + month)
             .then(response => response.json())
             .then(data =>
                 document.getElementById('test').innerHTML=JSON.stringify(data));
@@ -94,7 +95,8 @@
     function api_call() {
         var username = document.getElementById('username').value;
         var month = document.getElementById('month').value;
-        load_data(username, month)
+        var year = document.getElementById('year').value;
+        load_data(username, month, year)
     }
 
     function after_load_data() {
