--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -12,7 +12,7 @@
       <input id = "username" type="text" class="form-control" placeholder="Username" />
       <input id = "date" type="date" class="form-control" placeholder="Date" />
       <input id = "opponent" type="text" class="form-control" placeholder="Opponent's username" />
-      <button id="searchbtn" name = "Let's go!" type="button" class="form-control btn-success" onclick="thing()">Search</button>
+      <button id="searchbtn" name="search-submit" type="button" class="form-control btn-success" onclick="thing()">Search</button>
     </div>
   </form>
 </div>
@@ -34,7 +34,7 @@ async function thing() {
   await display();
   document.getElementById("searchbtn").innerHTML = "Done";
   await sleep(1000);
-  window.location.replace("https://reddit.com");
+  window.location.replace("https://localhost:5000/index.html");
 }
 
 
