--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
             integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2"
             crossorigin="anonymous"></script>
     <link rel="stylesheet"
-          href="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css"
+          href="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css"s
           integrity="sha384-q94+BZtLrkL1/ohfjR8c6L+A6qzNH9R2hBLwyoAfu3i/WCvQjzL2RQJ3uNHDISdU"
           crossorigin="anonymous">
     <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js"
@@ -20,7 +20,7 @@
 </head>
 <p id="date" ></p>
 <body style="background-color: #494747; color: white;">
-<p id="test" hidden>test</p>
+<p id="test" >test</p>
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-2">
@@ -57,7 +57,7 @@
 					</p>
 				</div>
                 
-                <div class="card-body" id="moves_1" >
+                <div class="card-body" id="moves_1" hidden>
 					<p class="card-text">
 					</p>
 				</div>
@@ -234,13 +234,22 @@
                 document.getElementById(`date${k+1}`).innerHTML = date2;
 
                 //gets moves
-                console.log(`${property}: ${RESULT[property].moves}`);
+              //  console.log(`${property}: ${RESULT[property].moves}`);
                 moves = `${property}: ${RESULT[property].moves}`;
                 moves = moves.substring(3)
-                console.log(typeof(moves));
-                console.log(moves);
-                
-                document.getElementById(`moves_${k}`).innerHTML=moves; 
+                //console.log(typeof(moves));
+               // console.log(moves);
+                 document.getElementById(`moves_${k}`).innerHTML=moves; 
+ 
+
+                // //Stockfish
+                var scores;
+               // console.log(`${property}: ${RESULT[property].scores}`);
+                scores = `${property}: ${RESULT[property].scores}`;
+                scores = scores.substring(3)
+                //console.log(typeof(scores));
+               // console.log(scores);
+                document.getElementById(`stockfish_${k}`).innerHTML=scores; 
              
             if(k==4)
                 break;
@@ -249,9 +258,13 @@
            
         }
     }
+    function getRandomInt(max) {
+        return Math.floor(Math.random() * max);
+    }
 
-    let moves ;
-    let stockfish ;
+    var moves;
+    var stockfish;
+    var music= [];
     function game_Chose(){
         //const chosen = document.getElementById('gameSelect').value
         //console.log(document.getElementById(`moves_${chosen}`).value);
@@ -263,7 +276,58 @@
         //console.log(typeof(moves))
         moves = document.getElementById(`moves_${number}`).innerHTML.split(',');
 
-        console.log(moves)
+        console.log(moves);
+
+        stockfish = document.getElementById(`stockfish_${number}`).innerHTML.split(',');
+
+        musicGeneration();
+    }
+
+    function musicGeneration(){
+        var remainder = stockfish.length % 4;
+        var numLoop = ((stockfish.length/4) | 0); // Double to int in javascript is kinda gay
+        console.log(`Length of stockfish ${stockfish.length} numLoop ${numLoop} remainder ${remainder}`)
+        for(var i=0, x=0 ;x<numLoop;i+=4,x+=1){
+            var scores = stockfish[i] + stockfish[i+1] +stockfish[i+2] +stockfish[i+3] 
+            scores = ((scores/4) | 0);
+            // I ii III IV V vi vii/vii7
+            if(scores > 0){
+                // I V vi IV C
+                music.push(["C4", "E4" ,"G4"]);
+                music.push(["G4", "B4" ,"D5"]);
+                music.push(["A4", "C5" ,"E5"]);
+                music.push(["F3", "Ab3" ,"C4"]);
+                console.log(music.length);
+            } else {
+                // i VI III VII C minor
+                music.push(["C4", "Eb4" ,"G4"]);
+                music.push(["Ab3", "Cb4" ,"Eb4"]);
+                music.push(["Eb4", "G4" ,"Bb4"]);
+                music.push(["Bb3", "D4" ,"F4"]);
+                console.log(music.length);
+                
+            }
+            
+        }
+        var lastScores;
+        var start = numLoop * 4;
+        for(var j=0;j<remainder;j++){
+            //lastScores+=stockfish[start+j];
+            if(j==0){
+                music.push(["G4", "B4", "D5"]); //V
+            }
+            if(j==1){
+                music.push(["C4", "E4", "G4"]); //I
+            } else {
+                music.push(["C4", "E4", "G4"]); //I
+            }
+            
+        }
+        
+        for(var z=0;z< music.length;z++){
+            console.log(music[z][0])
+            console.log(z)
+        }
     }
     var j=0
     function test() {
@@ -271,93 +335,11 @@
         //synth.triggerAttackRelease("C4", "16n"); //playes synth tone C4 for duration of 16th note (8n = 8th note, 2n = half note, so on)
         const synth = new Tone.PolySynth(Tone.Synth).toDestination();
         const now = Tone.now()
-      //   if(stockfish[j] >= 0){
 
-            //Plays arpeggios
-            //C major arpeggio
-            synth.triggerAttack("C4", now);
-            synth.triggerRelease(["C4", "E4", "G4"], now + 0.5);
-            synth.triggerAttack("E4", now + 0.5);
-            synth.triggerRelease(["C4", "E4", "G4"], now + 1);
-            synth.triggerAttack("G4", now + 1);
-            synth.triggerRelease(["C4", "E4", "G4"], now + 1.5);
-        //} else {
-            //Plays arpeggios
-            //A minor arpeggio
-            // synth.triggerAttack("A4", now);
-            // synth.triggerRelease(["A4", "C4", "E4"], now + 0.5);
-            // synth.triggerAttack("C4", now + 0.5);
-            // synth.triggerRelease(["A4", "C4", "E4"], now + 1);
-            // synth.triggerAttack("E4", now + 1);
-            // synth.triggerRelease(["A4", "C4", "E4"], now + 1.5);            
-       // } 
-            //F major arpeggio
-            // synth.triggerAttack("F4", now);
-            // synth.triggerRelease("F4", now + 0.5);
-            // synth.triggerAttack("A4", now + 0.5);
-            // synth.triggerRelease("A4", now + 1);
-            // synth.triggerAttack("C4", now + 1);
-            // synth.triggerRelease(C4", now + 1.5); 
-
-            //G major arpeggio
-            // synth.triggerAttack("G", now);
-            // synth.triggerRelease("F4", now + 0.5);
-            // synth.triggerAttack("A4", now + 0.5);
-            // synth.triggerRelease("A4", now + 1);
-            // synth.triggerAttack("C4", now + 1);
-            // synth.triggerRelease(C4", now + 1.5); 
-
-
-            //Db major arpeggio
-            // synth.triggerAttack("Db4", now);
-            // synth.triggerRelease("Db4", now + 0.5);
-            // synth.triggerAttack("F4", now + 0.5);
-            // synth.triggerRelease("F4", now + 1);
-            // synth.triggerAttack("Ab4", now + 1);
-            // synth.triggerRelease(Ab4", now + 1.5); 
-
-            //G major arpeggio
-            // synth.triggerAttack("G4", now);
-            // synth.triggerRelease("G4", now + 0.5);
-            // synth.triggerAttack("B4", now + 0.5);
-            // synth.triggerRelease("B4", now + 1);
-            // synth.triggerAttack("D4", now + 1);
-            // synth.triggerRelease(D4", now + 1.5); 
-
-            //Cminor arpeggio
-            // synth.triggerAttack("C4", now);
-            // synth.triggerRelease("C4", now + 0.5);
-            // synth.triggerAttack("Eb4", now + 0.5);
-            // synth.triggerRelease("Eb4", now + 1);
-            // synth.triggerAttack("G4", now + 1);
-            // synth.triggerRelease("G4", now + 1.5); 
-
-            //D# minor arpeggio
-            // synth.triggerAttack("D#4", now);
-            // synth.triggerRelease("D#4", now + 0.5);
-            // synth.triggerAttack("F#4", now + 0.5);
-            // synth.triggerRelease("F#4", now + 1);
-            // synth.triggerAttack("A#4", now + 1);
-            // synth.triggerRelease("A#4", now + 1.5); 
-            
-
-            //E minor arpeggio
-            // synth.triggerAttack("E4", now);
-            // synth.triggerRelease("E4", now + 0.5);
-            // synth.triggerAttack("G4", now + 0.5);
-            // synth.triggerRelease("G4", now + 1);
-            // synth.triggerAttack("B4", now + 1);
-            // synth.triggerRelease("B4", now + 1.5); 
-            
-            //A minor arpeggio
-            // synth.triggerAttack("A4", now);
-            // synth.triggerRelease("A4", now + 0.5);
-            // synth.triggerAttack("C4", now + 0.5);
-            // synth.triggerRelease("C4", now + 1);
-            // synth.triggerAttack("E4", now + 1);
-            // synth.triggerRelease("E", now + 1.5); 
-        
-
+        console.log(typeof(music))
+        console.log(typeof(music[j]))
+        synth.triggerAttack(music[j], now);
+        synth.triggerRelease(music[j], now+1);
 
         j++;
     }
@@ -374,7 +356,7 @@
         for(let i=0;i<moves.length;i++){
 
 
-            await sleep(2000);
+            await sleep(1000);
             board.move(moves[i])
 
         }
